--- a/index.html
+++ b/index.html
@@ -22,18 +22,21 @@
 
             <p class="mb">Neste evento, você vai aprender todos os segredos que vão te fazer ser um empreendedor de sucesso sem precisar contar com a sorte.</p>
 
-            <form action="" method="post" autocomplete="off">
+            <form action="https://gmail.us21.list-manage.com/subscribe/post?u=92995ba0c3604488c964e9911&amp;id=96e7818691&amp;f_id=00c5cfe1f0" method="post" autocomplete="off" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self">
 
-                <input id="name" name="name" placeholder="Nome">
+                <input id="name" type="text" name="FNAME" placeholder="Nome" required>
 
-                <input id="email" name="email" placeholder="Email">
+                <input id="email" type="email" name="EMAIL" placeholder="Email" required>
 
-                <select name="place">
+                <select name="PLACE" required>
                     <option value="rj">Rio de Janeiro</option>
                     <option value="sp">São Paulo</option>
                     <option value="mg">Minas Gerais</option>
                     <option value="es">Espirito Santo</option>
                 </select>
+
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_92995ba0c3604488c964e9911_96e7818691" tabindex="-1" value=""></div>
 
                 <input type="submit" value="INSCREVA-SE">
             </form>
